<resources>
    <string name="app_name">YAQ</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>

    <!-- MainActivity -->
    <string name="host">Host Game</string>
    <string name="join">Join Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="muh">Muhhh</string>


    <!-- MainActivity Menu-->
    <string name="action_settings">Game Settings</string>
    <string name="action_about">About YAQ</string>
    <string name="action_themes">Themes</string>
    <string name="manage_questions">Manage Questions</string>
    <string name="questions_import">Questions Import</string>
    <string name="profile">Profile</string>
    <string name="about_dialog_message">
        <b>&#169; by Team Bitschupfa</b> \n
        Cat images designed by <a href="http://www.freepik.com/free-vector/minimal-cat-portrait_719781.htm">Freepik</a> \n
        Yak horns designed by <a href="http://www.vectorportal.com">Vectorportal</a></string>
    <string name="about_dialog_title">About YAQ</string>
    <string name="chromecast">Cast</string>
    <string name="import_successul">Import was successful</string>
    <string name="import_not_successul">Import was not successful</string>

    <!-- HostActivity -->
    <string name="title_activity_host">Host Game</string>
    <string name="build">Build quiz</string>
    <string name="start_game">Start game</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="player">Player</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="player6">Player 6</string>
    <string name="player7">Player 7</string>
    <string name="player8">Player 8</string>
    <string name="hostname">Hostname:</string>
    <string name="numberQuestionsText">Number of Questions:</string>
    <string name="bluetooth_not_supported_error">Bluetooth is not supported on this device</string>

    <!-- JoinActivity -->
    <string name="title_activity_join">Join Game</string>
    <string name="dialog_find_device_title">Find Device</string>
    <string name="dialog_paired_devices">Paired Devices:</string>
    <string name="dialog_unpaired_devices">Discovered Devices:</string>
    <string name="dialog_no_devices_found">No Devices found…</string>
    <string name="refresh">Refresh</string>
    <string name="time_counter">Time Counter</string>
    <string name="waiting">Waiting for host, to start the game!</string>
    <string name="communication_error">Unable to communicate with the other device</string>
    <string name="connection_error">Unable to connect to the other device</string>
    <string name="start_discovery_error">Could not start device discovery</string>
    <string name="game_full_error">Sorry, the game is already full</string>

    <!-- QuestionsAskedActivity -->
    <string name="title_activity_questions_asked">YAQ</string>
    <string name="time_up">Time\'s up!</string>
    <string name="next_question">Next question</string>

    <!-- StatisticActivity -->
    <string name="title_activity_statistic">Statistics</string>
    <string name="play_again">Play Again</string>

    <!-- ProfileActivity-->
    <string name="title_activity_profile">Profile</string>
    <string name="player_name">player name</string>

    <!-- BuildQuizActivity-->
    <string name="title_activity_build_quiz">Build Quiz</string>
    <string name="submit_quiz">submit</string>
    <string name="hint_search_quiz">search catalogues</string>
    <string name="checkEasy">easy</string>
    <string name="checkMedium">medium</string>
    <string name="checkHard">hard</string>
    <string name="numberOfQuestions">number of questions</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="questions">questions</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="noDifficulty">NO DIFFICULTY</string>

    <!-- ThemesActivity -->
    <string name="title_activity_themes">Themes</string>
    <string name="theme1">Blue</string>
    <string name="theme2">Green</string>
    <string name="theme3">Cat Special</string>
    <string name="theme4">Teal</string>

    <!-- ErrorStrings -->
    <string name="error_cant_show_score">An error occurs while showing scores!</string>
    <string name="error_cant_connect">An error occurs while create connection!</string>
    <string name="not_implemented">Not implemented yet!</string>
    <string name="noQuestionsSelected">No questions selected!</string>
    <string name="connectionClosedByHost">Connection was closed by the host!</string>
    <string name="connectionErrorByHost">Error at Host-side!</string>
    <string name="shouldConnectionBeClosed">Should the connection be closed?</string>

    <!-- Chromecast -->
    <string name="waiting_for_gamestart">Waiting for game to start …</string>
    <string name="waiting_for_players">Waiting for players to join …</string>

    <!-- ManageQuestions -->
    <string name="title_activity_show_catalogues">Show catalogues</string>
    <string name="title_activity_show_questions">Show questions</string>
    <string name="title_activity_edit_questions">Edit questions</string>
    <string name="title_dialog_add_catalog">Add Catalog</string>
    <string name="title_dialog_edit_catalog">Edit Catalog</string>
    <string name="menu_edit">edit</string>
    <string name="menu_delete">delete</string>
</resources>