<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainMenue">
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_manage"
        android:orderInCategory="100"
        android:title="@string/manage_questions"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
</menu>
