<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textVisiblePassword">
        <requestFocus />
    </EditText>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:theme="@android:style/Theme.Holo">

        <RadioButton
            android:id="@+id/checkEasyDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkEasy"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/checkMediumDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkMedium"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/checkHardDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkHard"
            android:textColor="@color/colorPrimaryDark" />

    </RadioGroup>

</LinearLayout>