<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainMenue"
    tools:showIn="@layout/activity_main_menue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/yak"
            android:minHeight="380dp"
            android:minWidth="300dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/player"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">

            <Button
                android:id="@+id/host_btn"
                android:text="@string/host"
                android:background="@drawable/button_blue"
                style="@style/button_text"
                android:onClick="hostButtonClicked"/>

            <Button
                android:id="@+id/join_btn"
                android:text="@string/join"
                android:background="@drawable/button_blue"
                style="@style/button_text"
                android:onClick="joinButtonClicked"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
