<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ManageQuestions"
    tools:showIn="@layout/activity_manage_questions">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="18">

        <EditText
            android:id="@+id/EditTextBuildQuizM"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_quiz"
            android:inputType="textVisiblePassword"
            android:paddingTop="15dp"
            android:drawableLeft="@drawable/abc_ic_search_api_mtrl_alpha">
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkEasy"
                android:checked="true"
                android:textColor="@color/grey900"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/checkMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkMedium"
                android:checked="true"
                android:textColor="@color/grey900"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/checkHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkHard"
                android:checked="true"
                android:textColor="@color/grey900"
                android:onClick="onCheckboxClicked"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dip"
            android:id="@+id/line1" />

        <ListView
            android:id="@+id/ListViewManageQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >
        </ListView>

    </LinearLayout>

</RelativeLayout>
