<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bitschupfa.sw16.yaq.activities.Join"
    tools:showIn="@layout/activity_join">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player1_name"
                    android:text="@string/player1"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player2_name"
                    android:text="@string/player2"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player3_name"
                    android:text="@string/player3"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player4_name"
                    android:text="@string/player4"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player5_name"
                    android:text="@string/player5"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player6_name"
                    android:text="@string/player6"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player7_name"
                    android:text="@string/player7"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/player8_name"
                    android:text="@string/player8"
                    android:layout_width="wrap_content"
                    style="@style/table_text_gray"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textIsSelectable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/player_table_inactive"
                    android:drawableLeft="@mipmap/icon_player_black"
                    android:drawableStart="@mipmap/icon_player_black"
                    android:drawablePadding="5dp"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ProgressBar
                android:id="@+id/loadingBar"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/waiting"
                android:id="@+id/textView" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

